Issue in Events Model

--- a/Revels'15/EventCell.xib
+++ b/Revels'15/EventCell.xib
@@ -12,8 +12,26 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="EventName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6BT-tL-PzW">
-                    <rect key="frame" x="56" y="8" width="188" height="57"/>
+                    <rect key="frame" x="61" y="1" width="179" height="33"/>
                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tra-lq-cnO">
+                    <rect key="frame" x="8" y="48" width="188" height="30"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Start" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GCC-FF-qxE">
+                    <rect key="frame" x="8" y="103" width="115" height="33"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Stop" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gz9-fv-XPG">
+                    <rect key="frame" x="131" y="103" width="115" height="33"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -21,9 +39,12 @@
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="eventNameLabel" destination="6BT-tL-PzW" id="P1Q-Nz-d7I"/>
+                <outlet property="eventLocationLabel" destination="tra-lq-cnO" id="2LQ-Yf-I85"/>
+                <outlet property="eventNameLabel" destination="6BT-tL-PzW" id="snN-n1-y0s"/>
+                <outlet property="eventStartTimeLabel" destination="GCC-FF-qxE" id="ngc-ly-VFk"/>
+                <outlet property="eventStopTimeLabel" destination="Gz9-fv-XPG" id="k9L-1y-8da"/>
             </connections>
-            <point key="canvasLocation" x="364" y="135"/>
+            <point key="canvasLocation" x="92" y="129"/>
         </view>
     </objects>
 </document>
